# LGU-MAT4007-TeamProject01

./: README.md  pyproject.toml  requirements.txt
docs/: design.md
src/aescbc/api/: routes.py
src/aescbc/crypto/: utils.py
src/aescbc/services/: __init__.py  text_service.py
src/aescbc/web/static/css/: styles.css
src/aescbc/web/static/js/: app.js
src/aescbc/web/templates/: index.html
tests/: test_api.py
